fix z-index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -153,7 +153,7 @@ body {
 /* ----form---- */
 
 .form {
-    z-index: 2;
+    z-index: 3;
     position: absolute;
     top: 35%;
     left: 50%;
@@ -169,6 +169,7 @@ body {
 }
 
 #form-background {
+    z-index: 2;
     position: absolute;
     top: 0;
     left: 0;
